# EpiProcess.py

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  NEWS.md  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
data/: case_rate_subset.parquet  dv_subset.parquet  incidence_num_outlier_example.parquet  jhu_csse_daily_subset.parquet
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/EpiProcessPy/: EpiProcessPy.py  __init__.py  cli.py  data.py
tests/: __init__.py  test_EpiProcessPy.py
