[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EpiProcessPy"
version = "0.1.0"
description = "A Python port of epiprocess"
readme = "README.rst"
authors = [{ name = "David Weber", email = "dsweber2@pm.me" }]
requires-python = ">=3.9"
maintainers = [{ name = "David Weber", email = "dsweber2@pm.me" }]
classifiers = []
license = { text = "MIT license" }
dependencies = [
  "pandas",
  "epiweeks",
  "epidatpy @ git+https://github.com/cmu-delphi/epidatpy.git#egg=epidatpy",
]

[project.optional-dependencies]
dev = [
  "coverage", # testing
  "mypy",     # linting
  "pytest",   # testing
  "ruff",     # linting
]

[project.urls]
bugs = "https://github.com/dsweber2/EpiProcessPy/issues"
homepage = "https://github.com/dsweber2/EpiProcessPy"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
