[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EpiProcessPy"
version = "0.1.0"
description = "A Python port of epiprocess"
readme = "README.rst"
authors = [{ name = "David Weber", email = "dsweber2@pm.me" }]
requires-python = ">=3.10"
maintainers = [{ name = "David Weber", email = "dsweber2@pm.me" }]
classifiers = []
license = { text = "MIT license" }
dependencies = [
  "epidatpy @ git+https://github.com/cmu-delphi/epidatpy.git#egg=epidatpy",
  "epiweeks>=2.3.0",
  "pandas[parquet]>=2",
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "ruff"]

[project.urls]
bugs = "https://github.com/dsweber2/EpiProcessPy/issues"
homepage = "https://github.com/dsweber2/EpiProcessPy"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.ruff]
line-length = 120
format.docstring-code-format = true
format.docstring-code-line-length = "dynamic"
lint.extend-select = [
  "I",  # isort
  "UP", # pyupgrade
]


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5"]
